src/test/resources/examples/invalid/DoubleFxRoot.fxml
<?import javafx.scene.layout.BorderPane?>
<fx:root type="BorderPane" xmlns:fx="http://javafx.com/fxml">
    <fx:root type="BorderPane" />
</fx:root>